--- a/portal_item_backup.ipynb
+++ b/portal_item_backup.ipynb
@@ -24,7 +24,11 @@
     "\n",
     "Added code to:\n",
     "- zip each daily backup folder\n",
-    "- specify the number of daily backups to retain\n"
+    "- specify the number of daily backups to retain\n",
+    "\n",
+    "### Update: 7 July, 2025\n",
+    "\n",
+    "Added logging\n"
    ]
   },
   {
@@ -35,6 +39,7 @@
    "source": [
     "import os\n",
     "import shutil\n",
+    "import logging\n",
     "from pathlib import Path\n",
     "from zipfile import ZipFile, ZIP_DEFLATED\n",
     "from datetime import datetime"
@@ -50,7 +55,10 @@
     "# this is the maximum number of zip files that will be retained\n",
     "# Note: this will always be the number of newest files, not necessarily the number of days that are retained\n",
     "\n",
-    "retention_limit = 10"
+    "retention_limit = 4\n",
+    "\n",
+    "debug_level = logging.DEBUG\n",
+    "# debug_level = logging.INFO"
    ]
   },
   {
@@ -62,7 +70,9 @@
     "# Portal folder location storing JSON configuration file for each Item\n",
     "# these are the files getting backed up by this script\n",
     "\n",
-    "items_path = Path(r'D:\\arcgisportal\\content\\items')"
+    "# items_path = Path(r'D:\\arcgisportal\\content\\items') # prod\n",
+    "\n",
+    "items_path = Path(r'C:\\test\\items') # dev"
    ]
   },
   {
@@ -77,7 +87,10 @@
     "# temporarly folder containing copies of the JSON files are stored here\n",
     "# this folder is zipped, then deleted\n",
     "\n",
-    "arch_path = Path(r\"D:\\Backups_portal_items\")\n",
+    "# arch_path = Path(r\"D:\\Backups_portal_items\") # prod\n",
+    "\n",
+    "arch_path = Path(r\"C:\\test\\Backups_portal_items\") # dev\n",
+    "\n",
     "arch_name = Path(\"items_\" + datetime.strftime(datetime.today(), r'%Y_%m_%d_%H%M'))\n",
     "# ex: items_2025_06_27_1447\n",
     "\n",
@@ -85,7 +98,40 @@
     "arch_folder = Path(arch_path, arch_name)\n",
     "\n",
     "# filename of archived folder (zipped)\n",
-    "arch_zip = Path(arch_path, arch_name).with_suffix(\".zip\")"
+    "arch_zip = Path(arch_path, arch_name).with_suffix(\".zip\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the Logger object, configure it with a File Handler and output Formatter\n",
+    "\n",
+    "# Path to log file\n",
+    "logfile = Path(arch_path, \"portal_backup.log\")\n",
+    "\n",
+    "\n",
+    "# create Logger object\n",
+    "logger = logging.getLogger(__name__)\n",
+    "logger.setLevel(debug_level)\n",
+    "\n",
+    "\n",
+    "# Formatter\n",
+    "fmt_str = \"{asctime} - {levelname:<8} {message}\"\n",
+    "fmt_date = \"%a %Y-%m-%d %H:%M:%S\"\n",
+    "fmt_style = \"{\"\n",
+    "\n",
+    "log_formatter = logging.Formatter(fmt=fmt_str, datefmt=fmt_date, style=fmt_style)\n",
+    "\n",
+    "\n",
+    "# Handler\n",
+    "log_handler = logging.FileHandler(logfile, mode='a', encoding='UTF-8')\n",
+    "log_handler.setFormatter(log_formatter)\n",
+    "\n",
+    "# add the handler to the Logger object\n",
+    "logger.addHandler(log_handler)\n"
    ]
   },
   {
@@ -97,7 +143,11 @@
     "# check if the current output directory already exists in the backup folder location.  If not, create it.\n",
     "\n",
     "if not arch_folder.is_dir():\n",
-    "    Path.mkdir(arch_folder)"
+    "    try:\n",
+    "        Path.mkdir(arch_folder)\n",
+    "        logger.info(\"archive folder created: \" + str(arch_folder))\n",
+    "    except:\n",
+    "        logger.critical(\"unable to create archive folder\")\n"
    ]
   },
   {
@@ -122,6 +172,8 @@
     "            # we don't need to copy any other files (.xml, \\esriinfo folder, or thumbnails, etc)\n",
     "\n",
     "            # check if the filename is a valid UUID (string of 32 hexadecimal digits)\n",
+    "            logger.debug(file)\n",
+    "\n",
     "            if len(file) == 32:\n",
     "                try:\n",
     "                    # attempt to convert the filename string to an integer\n",
@@ -130,10 +182,15 @@
     "                    # copy the file\n",
     "                    shutil.copy2(os.path.join(root,file), arch_folder)\n",
     "\n",
+    "                    logger.info(str(file) + \" copied\")\n",
+    "\n",
     "                except ValueError:\n",
     "                    # the file name is not a valid UUID, which means it's not the Item json we want to copy\n",
-    "                    pass\n",
     "\n",
+    "                    # pass\n",
+    "                    logger.debug(str(file) + \" not copied\")\n",
+    "\n",
+    "    logger.info(\"Done copying files\")\n",
     "    print('  done\\n')"
    ]
   },
@@ -180,16 +237,23 @@
     "# create the zip file and add files to it\n",
     "with ZipFile(arch_zip, mode='w', compression=ZIP_DEFLATED, compresslevel=9) as outzip:\n",
     "\n",
+    "    logger.debug(\"Opening ZIP file\")\n",
+    "\n",
     "    for itemfile in Path(arch_folder).iterdir():\n",
     "\n",
     "        # write the Item JSON file to the zip archive\n",
     "        outzip.write(itemfile)\n",
     "\n",
+    "        logger.debug(str(itemfile) + \" added to ZIP archive\")\n",
+    "\n",
     "        # delete the original file\n",
     "        itemfile.unlink()\n",
+    "        logger.debug(str(itemfile) + \" deleted\")\n",
     "\n",
     "# remove the empty archive folder\n",
-    "arch_folder.rmdir()"
+    "arch_folder.rmdir()\n",
+    "\n",
+    "logger.info(\"archive folder deleted\")\n"
    ]
   },
   {
@@ -209,6 +273,8 @@
     "\n",
     "filelist = list(arch_path.glob('*.zip'))\n",
     "\n",
+    "logger.info(str(len(filelist)) + \" existing ZIP files\")\n",
+    "\n",
     "# Sort the filenames in ascending order\n",
     "# this is also chronological order, since filenames are based on date and time of archive\n",
     "filelist.sort()\n",
@@ -220,8 +286,13 @@
     "\n",
     "    dropfiles = filelist[:(len(filelist) - retention_limit)]\n",
     "\n",
+    "    logger.info(str(len(dropfiles)) + \" removed to mainain limit of \" + str(retention_limit) + \" ZIP files\")\n",
+    "\n",
     "    for file in dropfiles:\n",
-    "        Path.unlink(file)\n"
+    "        Path.unlink(file)\n",
+    "\n",
+    "logger.info(\"done\")\n",
+    "logging.shutdown()  # this might not be needed when running as a script\n"
    ]
   }
  ],
