improved logging and documentation

--- a/portal_item_backup.ipynb
+++ b/portal_item_backup.ipynb
@@ -8,7 +8,7 @@
     "Justin Johnson, justinpjohnson@utah.gov\n",
     "\n",
     "- Developed: 30 October, 2024\n",
-    "- Updated: 27 June, 2025\n",
+    "- Updated: June/July, 2025\n",
     "\n",
     "## What this does\n",
     "\n",
@@ -18,7 +18,9 @@
     "- Users were seeing edits that they made to web maps, forms, popups, and other configurations revert or entirely disappear after saving.\n",
     "\n",
     "This script\n",
-    "- copies the Item json configuration files from the arcgisporta\\content\\items folder to use as either a restore or to compare changes happening to the files from day to day\n",
+    "- copies the Item json configuration files from the arcgisportal\\content\\items folder to use as either a restore or to compare changes happening to the files from day to day\n",
+    "- each daily backup folder is zipped\n",
+    "- a retention limit is set to maintain the most recent number of daily backups\n",
     "\n",
     "### Update: 27 June, 2025\n",
     "\n",
@@ -28,21 +30,31 @@
     "\n",
     "### Update: 7 July, 2025\n",
     "\n",
-    "Added logging\n"
+    "- added logging functionality to store a log of each scheduled run\n",
+    "- added error checks for file paths\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "import shutil\n",
     "import logging\n",
+    "\n",
     "from pathlib import Path\n",
     "from zipfile import ZipFile, ZIP_DEFLATED\n",
     "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Required User Inputs"
    ]
   },
   {
@@ -55,10 +67,23 @@
     "# this is the maximum number of zip files that will be retained\n",
     "# Note: this will always be the number of newest files, not necessarily the number of days that are retained\n",
     "\n",
-    "retention_limit = 4\n",
+    "retention_limit = 15\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the logging level\n",
+    "# this is the minimum logging level that will be retained in all log files and output streams\n",
     "\n",
-    "debug_level = logging.DEBUG\n",
-    "# debug_level = logging.INFO"
+    "# INFO\n",
+    "log_level = logging.INFO\n",
+    "\n",
+    "# DEBUG\n",
+    "# log_level = logging.DEBUG"
    ]
   },
   {
@@ -70,9 +95,11 @@
     "# Portal folder location storing JSON configuration file for each Item\n",
     "# these are the files getting backed up by this script\n",
     "\n",
-    "# items_path = Path(r'D:\\arcgisportal\\content\\items') # prod\n",
+    "items_path = Path(r'D:\\arcgisportal\\content\\items')\n",
     "\n",
-    "items_path = Path(r'C:\\test\\items') # dev"
+    "if not items_path.is_dir():\n",
+    "    print(\"Path to Items folder is not valid\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
@@ -87,9 +114,12 @@
     "# temporarly folder containing copies of the JSON files are stored here\n",
     "# this folder is zipped, then deleted\n",
     "\n",
-    "# arch_path = Path(r\"D:\\Backups_portal_items\") # prod\n",
+    "arch_path = Path(r\"D:\\Backups_portal_items\")\n",
     "\n",
-    "arch_path = Path(r\"C:\\test\\Backups_portal_items\") # dev\n",
+    "if not arch_path.is_dir():\n",
+    "    print(\"Path to Archive storage folder is not valid\")\n",
+    "    sys.exit(1)\n",
+    "\n",
     "\n",
     "arch_name = Path(\"items_\" + datetime.strftime(datetime.today(), r'%Y_%m_%d_%H%M'))\n",
     "# ex: items_2025_06_27_1447\n",
@@ -102,21 +132,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log File setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the Logger object, configure it with a File Handler and output Formatter\n",
-    "\n",
     "# Path to log file\n",
     "logfile = Path(arch_path, \"portal_backup.log\")\n",
     "\n",
+    "if not logfile.exists():\n",
+    "    try:\n",
+    "        logfile.touch()  # not really necessary. Logger will create this if it doesn't exist\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Unable to create new log file. Path may be invalid.\")\n",
+    "        sys.exit(1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log Handler setup\n",
     "\n",
+    "There are two Handler objects created below. One will send log messages to the Log file. The other will display log messages to `stderr`\n",
+    "- each handler has its own logging level defined, but the `log_level` set above is the absolute minimum for all handlers\n",
+    "  - i.e. to send `DEBUG` logs to the log file or `stderr`, the `log_level` must be changed to `DEBUG` above, and in the handlers below\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create Logger object\n",
     "logger = logging.getLogger(__name__)\n",
-    "logger.setLevel(debug_level)\n",
+    "logger.setLevel(log_level)\n",
     "\n",
+    "# Set the format of the Log messages\n",
+    "# ex:  Tue 2025-07-08 10:24:07 - INFO     creating ZIP archive: C:\\test\\Backups_portal_items\\items_2025_07_08_1014.zip\n",
     "\n",
     "# Formatter\n",
     "fmt_str = \"{asctime} - {levelname:<8} {message}\"\n",
@@ -126,33 +187,73 @@
     "log_formatter = logging.Formatter(fmt=fmt_str, datefmt=fmt_date, style=fmt_style)\n",
     "\n",
     "\n",
-    "# Handler\n",
-    "log_handler = logging.FileHandler(logfile, mode='a', encoding='UTF-8')\n",
-    "log_handler.setFormatter(log_formatter)\n",
+    "# configure the Logger with a File Handler and output Stream Handler\n",
     "\n",
-    "# add the handler to the Logger object\n",
-    "logger.addHandler(log_handler)\n"
+    "# File Handler (sends log message to log file)\n",
+    "log_handler_file = logging.FileHandler(logfile, mode='a', encoding='UTF-8')\n",
+    "log_handler_file.setFormatter(log_formatter)\n",
+    "\n",
+    "\n",
+    "# Stream Handler (sends log messages to sys.stderr)\n",
+    "log_handler_stream = logging.StreamHandler()\n",
+    "log_handler_stream.setLevel(logging.DEBUG)\n",
+    "log_handler_stream.setFormatter(log_formatter)\n",
+    "\n",
+    "\n",
+    "# add the Handlers to the Logger object\n",
+    "logger.addHandler(log_handler_file)\n",
+    "logger.addHandler(log_handler_stream)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the archive folder for the daily backup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Tue 2025-07-08 10:56:41 - INFO     backup start\n",
+      "Tue 2025-07-08 10:56:41 - INFO     archive folder created: C:\\test\\Backups_portal_items\\items_2025_07_08_1056\n"
+     ]
+    }
+   ],
    "source": [
-    "# check if the current output directory already exists in the backup folder location.  If not, create it.\n",
+    "# check if the current output directory already exists in the backup folder location (it should not).\n",
+    "# If not, create it\n",
     "\n",
     "if not arch_folder.is_dir():\n",
     "    try:\n",
     "        Path.mkdir(arch_folder)\n",
+    "\n",
+    "        # log the start time of the backup\n",
+    "        logger.info(\"backup start\")\n",
+    "\n",
     "        logger.info(\"archive folder created: \" + str(arch_folder))\n",
     "    except:\n",
     "        logger.critical(\"unable to create archive folder\")\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterate through all files in the Portal Items Folder\n",
+    "- find the valid JSON configuration files\n",
+    "- copy those to the backup folder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +273,7 @@
     "            # we don't need to copy any other files (.xml, \\esriinfo folder, or thumbnails, etc)\n",
     "\n",
     "            # check if the filename is a valid UUID (string of 32 hexadecimal digits)\n",
-    "            logger.debug(file)\n",
+    "            logger.debug(\"file: \" + file)\n",
     "\n",
     "            if len(file) == 32:\n",
     "                try:\n",
@@ -190,19 +291,31 @@
     "                    # pass\n",
     "                    logger.debug(str(file) + \" not copied\")\n",
     "\n",
-    "    logger.info(\"Done copying files\")\n",
-    "    print('  done\\n')"
+    "    logger.info(\"done copying JSON files\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Tue 2025-07-08 10:56:47 - INFO     000c791c87b24ab8a2d8c431ca597c0d copied\n",
+      "Tue 2025-07-08 10:56:47 - INFO     000e17f48f534af18d22d42e0526d8a8 copied\n",
+      "Tue 2025-07-08 10:56:47 - INFO     00a094c8674c4377b33c9792855a9194 copied\n",
+      "Tue 2025-07-08 10:56:47 - INFO     00a4155d8fae4befadbe61bd6af6836c copied\n",
+      "Tue 2025-07-08 10:56:47 - INFO     00a7aa417c774217923a510f2b0221f7 copied\n",
+      "Tue 2025-07-08 10:56:47 - INFO     done copying JSON files\n"
+     ]
+    }
+   ],
    "source": [
-    "# copy the files...\n",
+    "# Run the function to copy the files...\n",
     "\n",
     "copy_json_files(items_path)"
    ]
@@ -211,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point:\n",
+    "## At this point:\n",
     "- the current Portal Item JSON files have been copied from `items_path` to a backup folder `arch_folder`\n",
     "\n",
     "Next:\n",
@@ -222,33 +335,44 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Zip the folder, then delete it"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Tue 2025-07-08 10:57:04 - INFO     creating ZIP archive: C:\\test\\Backups_portal_items\\items_2025_07_08_1056.zip\n",
+      "Tue 2025-07-08 10:57:04 - INFO     archive folder deleted\n"
+     ]
+    }
+   ],
    "source": [
     "# create the zip file and add files to it\n",
+    "logger.info(\"creating ZIP archive: \" + str(arch_zip))\n",
+    "\n",
     "with ZipFile(arch_zip, mode='w', compression=ZIP_DEFLATED, compresslevel=9) as outzip:\n",
     "\n",
-    "    logger.debug(\"Opening ZIP file\")\n",
+    "    logger.debug(\"opened ZIP file\")\n",
     "\n",
     "    for itemfile in Path(arch_folder).iterdir():\n",
     "\n",
     "        # write the Item JSON file to the zip archive\n",
-    "        outzip.write(itemfile)\n",
+    "        # by default, this creates a series of subfolders inside the ZIP file, in the same structure as the original\n",
+    "        # this makes it diffcult to browse ZIP files and restore their content (x subfolders deep, etc)\n",
+    "        # strip out the leading path of subfolders by specifying arcname=itemfile.name\n",
+    "\n",
+    "        outzip.write(itemfile, arcname=itemfile.name)\n",
     "\n",
     "        logger.debug(str(itemfile) + \" added to ZIP archive\")\n",
     "\n",
     "        # delete the original file\n",
     "        itemfile.unlink()\n",
-    "        logger.debug(str(itemfile) + \" deleted\")\n",
+    "        logger.debug(str(itemfile) + \" deleted from archive folder\")\n",
+    "\n",
+    "    outzip.close()\n",
+    "    logger.debug(\"closed ZIP file\")\n",
     "\n",
     "# remove the empty archive folder\n",
     "arch_folder.rmdir()\n",
@@ -265,9 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Tue 2025-07-08 10:57:07 - INFO     5 existing ZIP files\n",
+      "Tue 2025-07-08 10:57:07 - INFO     backup complete\n"
+     ]
+    }
+   ],
    "source": [
     "# get a list of all zip files in the archive folder\n",
     "\n",
@@ -286,13 +419,15 @@
     "\n",
     "    dropfiles = filelist[:(len(filelist) - retention_limit)]\n",
     "\n",
-    "    logger.info(str(len(dropfiles)) + \" removed to mainain limit of \" + str(retention_limit) + \" ZIP files\")\n",
+    "    logger.info(str(len(dropfiles)) + \" removed to maintain retention limit of \" + str(retention_limit) + \" ZIP files\")\n",
     "\n",
     "    for file in dropfiles:\n",
     "        Path.unlink(file)\n",
+    "        logger.debug(str(file) + \" deleted\")\n",
     "\n",
-    "logger.info(\"done\")\n",
-    "logging.shutdown()  # this might not be needed when running as a script\n"
+    "\n",
+    "logger.info(\"backup complete\")\n",
+    "# logging.shutdown()  # this might not be needed when running as a script\n"
    ]
   }
  ],
