adjusted logging level of copied filenames

--- a/portal_item_backup.ipynb
+++ b/portal_item_backup.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,23 +209,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the archive folder for the daily backup"
+    "## Create the archive folder for the daily backup\n",
+    "- this stores the copied JSON files\n",
+    "- this folder is later zipped to create the ZIP archive (and save space)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tue 2025-07-08 10:56:41 - INFO     backup start\n",
-      "Tue 2025-07-08 10:56:41 - INFO     archive folder created: C:\\test\\Backups_portal_items\\items_2025_07_08_1056\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check if the current output directory already exists in the backup folder location (it should not).\n",
     "# If not, create it\n",
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +257,8 @@
     "# copy the JSON files from each subfolder to the backup folder named with today's date and time\n",
     "\n",
     "def copy_json_files(items_path):\n",
+    "\n",
+    "    copy_count = 0\n",
     "\n",
     "    for root, dirs, files in os.walk(items_path):\n",
     "\n",
@@ -282,8 +277,10 @@
     "\n",
     "                    # copy the file\n",
     "                    shutil.copy2(os.path.join(root,file), arch_folder)\n",
+    "                    copy_count += 1\n",
     "\n",
-    "                    logger.info(str(file) + \" copied\")\n",
+    "                    # set the specific file copied at the DEBUG level, or the logs fill up quickly.\n",
+    "                    logger.debug(str(file) + \" copied\")\n",
     "\n",
     "                except ValueError:\n",
     "                    # the file name is not a valid UUID, which means it's not the Item json we want to copy\n",
@@ -291,29 +288,16 @@
     "                    # pass\n",
     "                    logger.debug(str(file) + \" not copied\")\n",
     "\n",
-    "    logger.info(\"done copying JSON files\")"
+    "    logger.info(\"copied \" + str(copy_count) + \" JSON files to archive folder\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tue 2025-07-08 10:56:47 - INFO     000c791c87b24ab8a2d8c431ca597c0d copied\n",
-      "Tue 2025-07-08 10:56:47 - INFO     000e17f48f534af18d22d42e0526d8a8 copied\n",
-      "Tue 2025-07-08 10:56:47 - INFO     00a094c8674c4377b33c9792855a9194 copied\n",
-      "Tue 2025-07-08 10:56:47 - INFO     00a4155d8fae4befadbe61bd6af6836c copied\n",
-      "Tue 2025-07-08 10:56:47 - INFO     00a7aa417c774217923a510f2b0221f7 copied\n",
-      "Tue 2025-07-08 10:56:47 - INFO     done copying JSON files\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the function to copy the files...\n",
     "\n",
@@ -336,18 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tue 2025-07-08 10:57:04 - INFO     creating ZIP archive: C:\\test\\Backups_portal_items\\items_2025_07_08_1056.zip\n",
-      "Tue 2025-07-08 10:57:04 - INFO     archive folder deleted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the zip file and add files to it\n",
     "logger.info(\"creating ZIP archive: \" + str(arch_zip))\n",
@@ -389,18 +364,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tue 2025-07-08 10:57:07 - INFO     5 existing ZIP files\n",
-      "Tue 2025-07-08 10:57:07 - INFO     backup complete\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get a list of all zip files in the archive folder\n",
     "\n",
