updated README with info on GIS Enterprise Reporter script

--- a/gis_enterprise_reporter.ipynb
+++ b/gis_enterprise_reporter.ipynb
@@ -80,10 +80,14 @@
     "indx_portal = report_words.index('portal')  # find out where the word 'portal' is located (hint, it's 4)\n",
     "report_words = report_words[0:indx_portal+1]  # get the first 5 words in the filename (to include 'portal')\n",
     "report_words.append(date_str)  # append the date stamp to the list\n",
-    "zipfile = '_'.join(report_words)\n",
+    "zipfile = '_'.join(report_words)  # join all of the words into a string, separated by underscores\n",
+    "\n",
+    "# ex: \"central_udot_utah_gov_portal_20250715\"\n",
     "\n",
     "# build the full path and filename of the ZIP archive\n",
-    "arch_zip = Path(OutputDirectory, zipfile).with_suffix(\".zip\")"
+    "arch_zip = Path(OutputDirectory, zipfile).with_suffix(\".zip\")\n",
+    "\n",
+    "# ex: \"C:\\Esri\\output\\central_udot_utah_gov_portal_20250715.zip\""
    ]
   },
   {
